# mediaplayer_qt

./: CMakeLists.txt  README.md
doc/: media-player-2019-6-review-final.md  media-player-2019-6-review.md  midterm-review-from-peers.md  self-assessment.md
plan/: evaluation.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  media.cpp  media.h  metadata.cpp  metadata.h
